# cubist-sculptor

./: cubist-sculptor.cabal  math.html  stack.yaml
.stack-work/install/d9016aaf/flag-cache/: Leibniz-0.1.0.0-DW2L1DprBeSKynMxEzKTO7  StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  adjunctions-4.3-2gOdikP4TOk6bCl4TQTnzP  adjunctions-4.3-3ol9sWZt3In19pwXwPv3Xc  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6  bifunctors-5.4.1-8Xk5Wsnk1fr6rBLkW9MO8p  bifunctors-5.4.1-HvoG75ThrcWDYR8vpQmEIR  bytes-0.15.2-IB52XL1ksse9uNrzOlF6cm  bytes-0.15.2-LMf93HWO4lJBy9xhAb4Icx  cereal-0.5.3.0-90KodwwwQanJlL7equBhpB  comonad-5-28DG7R8USeHKXowIkMq8ME  comonad-5-2RMxpSOQ5MCHLHIelJrHD4  contravariant-1.4-8JKfZTNGDL78gUMj4VH9zF  contravariant-1.4-KSQE31a7FruKHDlp90hIUT  cubist-sculptor-0.1.0.0-KFShQdUfJqgH6PEbHiFQDs  distributive-0.5.0.2-Cdz2vLOk85j1doGXLcictT  exceptions-0.8.3-7py7fmRxowDFpHmiHGKrTb  free-4.12.4-22LY0NU51Vg7aGggSxs79k  free-4.12.4-Etm59Dm8iExFxAy1L49Ovd  hashable-1.2.4.0-EMu4H7FB10MAl6hwKw992G  kan-extensions-5.0.1-Asa0tkk9PuPLZ2eXuJ10Gr  kan-extensions-5.0.1-GYEaMv0JiPBGPZb4bmgUOV  lens-4.14-Gsq1wheYKVF1nI09AJ4K1O  lens-4.14-LQbbTc84mRL8zB39b41ZKA  linear-1.20.5-1XFX1PW2Ng12KqMxMQSDU4  linear-1.20.5-586MnWmU3PpFRx1fWdLTFJ  mtl-2.2.1-6qsR1PHUy5lL47Hpoa4jCM  parallel-3.2.1.0-6VcN0yUHtcs831TgbJiSSi  prelude-extras-0.4.0.3-FAyB4iuuM7cHXdrLMZtdXq  primitive-0.6.1.0-Ip44DqhfCp21tTUYbecwa  profunctors-5.2-2ZZOz6u59T2H8y7z3NgZkY  profunctors-5.2-JnOEqUUdt7sDImdYBNlUtM  reflection-2.1.2-J1ZzlxijzaHGRixYxgxlf9  scientific-0.3.4.9-6oTYuCcx6H5BsTGU7D2Gk3  (+13 more)
src/Geometry/Sculptor/: Shapes.hs
(+18 files in other folders)
