name:                cubist-sculptor
version:             0.1.0.0
synopsis:            
description:         Please see README.md
homepage:            https://github.com/SwiftsNamesake/cubist-sculptor#readme
license:             MIT
license-file:        LICENSE.md
author:              Jonatan H Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           (c) Jonatan H Sundqvist, 2016
category:            <Geometry>
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Geometry.Sculptor.Shapes
  build-depends:         base >= 4.7 && < 5
                       , linear
                       , Leibniz

  default-language:    Haskell2010

--executable cubist-sculptor
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , cubist-sculptor
--  default-language:    Haskell2010

--test-suite cubist-sculptor-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , cubist-sculptor
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

--source-repository head
--  type:     git
--  location: https://github.com/SwiftsNamesake/cubist-sculptor
